# TTaskScheduler

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
lib/: Scheduler.hpp
tests/: CMakeLists.txt  tests.cpp
